# canvasMCP

./: .gitignore  pyproject.toml
src/canvas_mcp/: run.py
